Fixed menu covering IP address dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 .ui.menu.side-menu {
   top: 65px;
+  z-index: 1;
 }
 .ui.segment.main-content {
   margin-top: 65px;
